--- a/tokens/tokens.css
+++ b/tokens/tokens.css
@@ -122,8 +122,6 @@
   --shadow-ring: 0 0 var(--spacing-3) hsl(var(--ring));
   --shadow-neo-soft: 0 var(--spacing-1) var(--spacing-3) calc(var(--spacing-1) * -1)
       hsl(var(--shadow-color));
-  --shadow-glow-small: 0 0 calc(var(--spacing-3) / 2) hsl(var(--glow) / 0.5);
-  --shadow-glow-strong: 0 0 var(--spacing-2) hsl(var(--glow));
   --shadow-glow-sm: 0 0 var(--spacing-2) var(--glow-active);
   --shadow-glow-md: 0 0 var(--spacing-4) var(--glow-active);
   --shadow-glow-lg: 0 0 var(--spacing-5) var(--glow-active);
@@ -198,6 +196,7 @@
     transparent var(--spacing-0-5),
     transparent calc(var(--spacing-0-5) + var(--spacing-0-25))
   );
+  --hero-divider-blur: calc(var(--spacing-1) * 1.5);
   --spacing-0-125: calc(var(--spacing-1) / 8);
   --spacing-0-25: calc(var(--spacing-1) / 4);
   --spacing-0-5: calc(var(--spacing-1) / 2);
