--- a/tokens/tokens.css
+++ b/tokens/tokens.css
@@ -54,9 +54,9 @@
   --tone-bot: 195 75% 56%;
   --tone-sup: 320 72% 60%;
   --aurora-g: var(--accent-2);
-  --aurora-g-light: color-mix(in oklab, hsl(var(--accent-2)) 37.5%, white);
+  --aurora-g-light: 150 100% 85%;
   --aurora-p: var(--accent);
-  --aurora-p-light: color-mix(in oklab, hsl(var(--accent)) 37.5%, white);
+  --aurora-p-light: 272 80% 85%;
   --icon-fg: 250 96% 78%;
   --accent-overlay: hsl(var(--accent));
   --ring-contrast: hsl(var(--ring));
@@ -213,6 +213,8 @@
   --visually-hidden-top: -9999px;
   --warning-foreground: 0 0% 6%;
   --success-foreground: 0 0% 6%;
+  --aurora-g-light-color: hsl(var(--aurora-g-light));
+  --aurora-p-light-color: hsl(var(--aurora-p-light));
   --spacing-0-125: calc(var(--spacing-1) / 8);
   --spacing-0-25: calc(var(--spacing-1) / 4);
   --spacing-0-5: calc(var(--spacing-1) / 2);
@@ -235,6 +237,8 @@
 @supports (color: color-mix(in oklab, white, black)) {
   :root {
     --aurora-g-light: color-mix(in oklab, hsl(var(--accent-2)) 37.5%, white);
+    --aurora-g-light-color: var(--aurora-g-light);
     --aurora-p-light: color-mix(in oklab, hsl(var(--accent)) 37.5%, white);
+    --aurora-p-light-color: var(--aurora-p-light);
   }
 }
